Resolves: tdf#81124 crash on setting autofilter on column with no content

Change-Id: Id53e589789144d892427a8a4ec1af1926aa97b52
(cherry picked from commit 3a5fa612b4afb72b5f91877a5c52e25c7604ae1a)
Reviewed-on: https://gerrit.libreoffice.org/14159
Tested-by: Markus Mohrhard <markus.mohrhard@googlemail.com>
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>